Fixed scrollbar moving content

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .App {
   text-align: center;
 }
@@ -10,17 +14,17 @@
 
 #page-container {
   position: relative;
-  min-height: 100vh;
+  min-height: 100vh; /* Main dive always takes 100% of viewport height */
 }
 #content-wrap {
-  padding-bottom: 2.5rem; /* Footer height */
+  padding-bottom: 3rem; /* Footer height */
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
-  line-height: 2.5rem; /* Vertically center the text there */
+  height: 3rem;
+  line-height: 3rem; /* Vertically center the text there */
   background-color: #303030;
 }
 
